# can-gw-tester

.devcontainer/: devcontainer.json
wp4/: .gitignore  Makefile  pyproject.toml
wp4/logs/: base-test-0.blf  charge-jitter-100ms-test.blf  delay-100ms-test.blf  delay-10ms-test.blf  drop-01%-test.blf  drop-50%-test.blf  gateway_can0_can1_20251212_155219.blf  gateway_can0_can1_20251212_160331.blf  gateway_can0_can1_20251212_160624.blf  jitter-100ms-test.blf  jitter-10ms-test.blf  jitter-500ms-test.blf  try-to-break-car.blf
wp4/src/wp4/: __init__.py  __main__.py
wp4/src/wp4/cli/: __init__.py
wp4/src/wp4/core/: __init__.py  bus_factory.py  direction_stats.py  events.py  gateway.py  gateway_logger.py  gateway_manager.py  interface_manager.py  log_exporter.py  manipulation.py
wp4/src/wp4/gui/: __init__.py  config.py
wp4/src/wp4/gui/adapters/: __init__.py  qt_events.py
wp4/src/wp4/gui/widgets/: __init__.py  can_frame_view.py  gateway_control.py  interface_control.py  logging_control.py  main_window.py  manipulation_widget.py  statistics.py  traffic_control.py  traffic_settings.py
wp4/src/wp4/lib/: __init__.py  canif.py
wp4/src/wp4/services/: __init__.py  gateway_service.py
wp4/tests/: conftest.py  test_latency.py
wp4/tests/core/: test_direction_stats.py  test_events.py  test_gateway.py  test_gateway_logger.py  test_gateway_manager.py  test_interface_manager.py  test_log_exporter.py  test_manipulation.py
wp4/tests/gui/: __init__.py  conftest.py  test_statistics_widget.py  test_traffic_control_widget.py
wp4/tests/integration/: __init__.py  test_full_workflow.py
wp4/tests/services/: test_gateway_service.py
